<?xml version="1.0"?>
<package format="2">
  <name>first_project</name>
  <version>0.0.0</version>
  <description>The first_project package</description>

  <maintainer email="federico_rocca@todo.todo">federico_rocca</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <!-- Exported executables -->
  <export>
    <executable path="src/gps_to_odom"/>
    <executable path="src/odom_to_tf"/>
    <executable path="src/lidar_remap"/>
  </export>
</package>
